Fix SonarQube issue about Stream.toList()